2009-01-29  Thomas Heller  <theller@python.net>

	* comtypes\client\_code_cache.py: Add missing 'import types' in
	comtypes\client\_code_cache.py.

2008-12-19  Thomas Heller  <theller@python.net>

	* Bumped version number to 0.6.0.

	* comtypes.client.lazybind.Dipatch:
	If __getitem__ fails the get the indexed default value, try
	NewENUM.  Implement __eq__ for Python 3 compatibility.

	* Fix a problem with SAFEARRAYs where the contained data was
	released too early.

	* Fix property get handling for FUNC_PUREVIRTUAL functions in
	lazybind.py

2008-12-18  Thomas Heller  <theller@python.net>

	* Fix memoryleak in IEnumVARIANT.

2008-12-12  Thomas Heller  <theller@python.net>
	
	* Merged changes from the dyndispatch branch:

	    * Add a comtypes.client.Constants class that provides a way to
	    access constants in the type library for an object, even when
	    no wrapper has been created for the type library.  The
	    contants can be accessed as attributes like this, assuming
	    'obj' is a COM object that exposes type information at runtime
	    via the dispatch interface:
		Constants(obj).MyConstant

	    * New comtypes.client.lazybind module.

	    * Implement NamedProperty.__call__().  Extend
	    NamedProperty.__getitem__() and NamedProperty.__setitem__() so
	    that they accept a tuple, which make lazy bound objects more
	    compatible with early bound objects.

	    * Finished (for now) the comtypes.client.lazybind module.
	    IEnumVARIANT instances get a _dynamic attribute which defaults
	    to False.  The values returned from next() calls are retrived
	    by calling ._set_value(self._dynamic) on the VARIANT result.

	    * comtypes.client.dynamic:

	    * Started changes based on ideas from Michael Curran: better
	    dynamic dispatch support, and a way to disable the
	    time-consuming wrapper code generation on demand.
	
	    * comtypes\client: Add a new 'dynamic=False' parameter to the