@@ -158,7 +158,11 @@ class Dispatch(object):
             # DISPATCH_METHOD
             def caller(*args):
                 return self._comobj._invoke(descr.memid, descr.invkind, 0, *args)
-            caller.__name__ = name
+            try:
+                caller.__name__ = name
+            except TypeError:
+                # In Python 2.3, __name__ is readonly
+                pass
             return caller
 
     def __setattr__(self, name, value):
